@startuml
Item "1" o-- "n" Exemplar
Person "1" o-- "n" Loan
Exemplar "n" o--o "m" Loan
class Item {
    + id : Long
    + name : String
    + genre : String
    + price : double
}
class Book extends Item {
    + id : Long
    + name : String
    + genre : String
    + price : double
}
class CD extends Item{
    + id : Long
    + name : String
    + genre : String
    + price : double
}
class Exemplar{
    + id: Long
    + item: Item
    + weariness: Weariness
}
class Loan{
    + id: Long
    + person: Person
    + exemplars: List<Exemplar>
    + dateOfTaking: LocalDate
    + dateOfReturn: LocalDate
    + dateOfActualReturn: LocalDate
}
class Person{
    + id : Long
    + name : String
    + loans : List<Loan>
}
enum Weariness {
    undamaged,
    used,
    heavilyUsed,
    unusable
}
@enduml